RESOLVED FIXED147214
[Win] Fix typos in PluginViewWin.cpp: kWebPluginViewdowClassName -> kWebPluginViewClassName
https://bugs.webkit.org/show_bug.cgi?id=147214
Summary [Win] Fix typos in PluginViewWin.cpp: kWebPluginViewdowClassName -> kWebPlugi...
Sungmann Cho
Reported 2015-07-22 18:22:13 PDT
SSIA
Attachments
Patch (2.18 KB, patch)
2015-07-22 18:23 PDT, Sungmann Cho
no flags
Sungmann Cho
Comment 1 2015-07-22 18:23:15 PDT
Csaba Osztrogonác
Comment 2 2015-07-23 04:35:25 PDT
Comment on attachment 257319 [details] Patch rs=me
WebKit Commit Bot
Comment 3 2015-07-23 05:22:53 PDT
Comment on attachment 257319 [details] Patch Clearing flags on attachment: 257319 Committed r187226: <http://trac.webkit.org/changeset/187226>
WebKit Commit Bot
Comment 4 2015-07-23 05:22:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.