[Win] Fix typos in PluginViewWin.cpp: kWebPluginViewdowClassName -> kWebPluginViewClassName https://bugs.webkit.org/show_bug.cgi?id=147214

Patch by Sungmann Cho <sungmann.cho@navercorp.com> on 2015-07-23
Reviewed by Csaba Osztrogonác.

* Plugins/PluginViewWin.cpp:
(WebCore::registerPluginView):
(WebCore::PluginView::platformStart):

Canonical link: https://commits.webkit.org/165289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187226 268f45cc-cd09-0410-ab3c-d52691b4dbfc